forgot_password page created and message shown on empty lists of books and reviews.

--- a/pages/forgot_password.html
+++ b/pages/forgot_password.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="UTF-8" />
         <title>Log In Book Rating System</title>
-        <link rel="stylesheet" href="../css/index.css" />
         <link rel="stylesheet" href="../css/general.css" />
         <link rel="stylesheet" href="../css/add_course_or_book.css" />
+        <link rel="stylesheet" href="../css/index.css" />
+        
         <style>
             .error_message {
                 padding: 0.5em;
@@ -15,84 +16,96 @@
                 font-size: 12px;
                 text-align: center;
             }
+
+            main {
+                margin-top: 3em;
+            }
+
+            #reset_title {
+                width: 100%; 
+                text-align:center;
+                font-weight: 700;
+                font-size: calc(15px + 1vw);
+            }
+
+            #reset_input_container {
+                flex-direction: column;
+            }
+
+            .form_row {
+                margin-top: 1em;
+            }
+
+            #message_container {
+                align-items: center;
+                justify-content: center;
+                margin-top: 1em;
+                display: none;
+            }
+
+            #message {
+                color: darkblue;
+                font-size: calc(12px + 1vw);
+                max-width: 500px;
+                text-align: center;
+                align-self: center;
+            }
+
+            #reset_input_container label {
+                display: none;
+            }
+
+            @media screen and (min-width: 701px) {
+                
+            }
         </style>
     </head>
     <body>
         <nav class="container nav_container">
             <div id="nav_90_container" class="container_90">
                 <div id="logo_container">
-                    <a href="#">
+                    <a href="../index.html">
                         <img id="logo" src="../imgs/logos/uol_logo.svg" alt="University of London logo" />
                     </a>
                 </div>
-                <div id="login_container_nav">
-                    <!--this section is not shown on smaller screens, the log in form looks different-->
-                    <form id="form_inline">
-                        <div class="margin_right_1">
-                            <label for="email_form1" class="hidden">Email</label>
-                            <input
-                                id="email_form1"
-                                type="email"
-                                class="form_input"
-                                placeholder="Enter email"
-                                required />
-                        </div>
-                        <div class="margin_right_1">
-                            <label for="password_form1" class="hidden">Password</label>
-                            <input
-                                id="password_form1"
-                                type="password"
-                                class="form_input"
-                                placeholder="Password"
-                                autocomplete="on"
-                                required />
-                            <p class="forgot_pass">
-                                <a href="#" alt="forgot password">Forgot password?</a>
-                            </p>
-                        </div>
-                        <div>
-                            <button id="log_in_btn_1" type="submit" class="button_green button">Log in</button>
-                        </div>
-                    </form>
-                    <div id="login_error_container_form1" class="error_message">
-                        <p id="login_error_message_form1"></p>
-                    </div>
-                </div>
-            </div>
         </nav>
 
-        <div id="main_large" class="container">
+        <main>
             <div class="container_90">
                 <div class="main_form_container">
-                    <form id="update_profile_form" class="form_box">
+                    <form id="reset_password_form" class="form_box">
                         <div class="form_row">
-                            <label for="name_input" class="form_label">Name</label>
-                            <input type="text" class="form_input" id="name_input" placeholder="Name" />
+                            <p id="reset_title">Reset your password</p>
                         </div>
-
-                        <div class="form_row">
-                            <label for="last_name_input" class="form_label">Last Name </label>
-                            <input type="text" class="form_input" id="last_name_input" placeholder="Last name" />
-                        </div>
-
-                        <div class="form_row">
-                            <label for="profile_pic_input" class="form_label">Profile picture </label>
-
-                            <input class="form_input" type="file" id="profile_pic_input" name="profile_pic_input" />
+                        <div id="reset_input_container" class="form_row">
+                            <label for="email" class="form_label">Enter your email</label>
+                            <input type="email" class="form_input" id="email" required placeholder="Enter your email" />
                         </div>
 
                         <div class="form_submit">
                             <button type="submit" class="button_green button submit_btn">
-                                Update Profile
+                                Reset password
                             </button>
                         </div>
 
-                        <div id="update_message_container" class="form_row message_container">
-                            <p id="update_message" class="message"></p>
+                        <div id="message_container" class="message_container">
+                            <p id="message" class="message">If this email address exists in the system, you will receive an email to reset your password</p>
                         </div>
                     </form>
                 </div>
             </div>
-        </div>
+        </main>
+        <script>
+
+            document.addEventListener("DOMContentLoaded", ()=>{
+                document.body.style.visibility = "visible";
+                var form = document.getElementById("reset_password_form");
+                form.addEventListener("submit", (event)=>{
+                    event.preventDefault();
+                    document.getElementById("message_container").style.display = "flex";
+                    // TODO: actually implement the functionality for submitting the reset
+                })
+            });
+        </script>
     </body>
 </html>
