--- a/pages/reviews_page.html
+++ b/pages/reviews_page.html
@@ -27,6 +27,8 @@
                         <h2 id="book_title_h2"></h2>
                     </div>
                 </div>
+                <div id="empty_list__message_container">
+                </div>
                 <div id="review_list_container" class="filtered_list">
                     <!--Reviews template will load here -->
                 </div>
