--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <title>Log In Book Rating System</title>
-        <link rel="stylesheet" href="../css/index.css" />
+        <link rel="stylesheet" href="./css/index.css" />
         <script type="module" src="./scripts/index.js"></script>
         <style>
             .error_message {
@@ -161,7 +161,7 @@
                             </div>
                         </form>
                         <p class="forgot_pass">
-                            <a href="#" alt="forgot password">Forgot password?</a>
+                            <a href="./pages/forgot_password.html" alt="forgot password">Forgot password?</a>
                         </p>
                         <div class="margin_bottom_1">
                             <p class="toggle_forms_paragraph">
