--- a/pages/course_page.html
+++ b/pages/course_page.html
@@ -28,6 +28,8 @@
                         <h2 id="book_title_h2"></h2>
                     </div>
                 </div>
+                <div id="empty_list__message_container">
+                </div>
                 <div id="book_list_container" class="filtered_list">
                     <!--books template will be inserted here-->
                 </div>
