reset password backend flow attached.

--- a/pages/reset_password.html
+++ b/pages/reset_password.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="../css/general.css" />
         <link rel="stylesheet" href="../css/add_course_or_book.css" />
         <link rel="stylesheet" href="../css/index.css" />
-        <script type="module" src="../scripts/forgot_password.js"></script>
+        <script type="module" src="../scripts/reset_password.js"></script>
         <style>
             .error_message {
                 padding: 0.5em;
@@ -78,8 +78,8 @@
                             <p id="reset_title">Reset your password</p>
                         </div>
                         <div id="reset_input_container" class="form_row">
-                            <label for="email" class="form_label">Enter your email</label>
-                            <input type="email" class="form_input" id="email" required placeholder="Enter your email" />
+                            <label for="new password" class="form_label">Enter your new password</label>
+                            <input type="newpassword" class="form_input" id="newpassword" required placeholder="Enter your new password" />
                         </div>
 
                         <div class="form_submit">
@@ -89,7 +89,7 @@
                         </div>
 
                         <div id="message_container" class="message_container">
-                            <p id="message" class="message">If this email address exists in the system, you will receive an email to reset your password</p>
+                            <p id="message" class="message">password reset succesfully.</p>
                         </div>
                     </form>
                 </div>
