--- a/pages/reset_password.html
+++ b/pages/reset_password.html
@@ -6,59 +6,9 @@
         <link rel="stylesheet" href="../css/general.css" />
         <link rel="stylesheet" href="../css/add_course_or_book.css" />
         <link rel="stylesheet" href="../css/index.css" />
+        <link rel="stylesheet" href="../css/profile_page.css" />
+        <link rel="stylesheet" href="../css/reset_password.css" />
         <script type="module" src="../scripts/reset_password.js"></script>
-        <style>
-            .error_message {
-                padding: 0.5em;
-                display: none;
-                color:red;
-                font-weight: 700;
-                font-size: 12px;
-                text-align: center;
-            }
-
-            main {
-                margin-top: 3em;
-            }
-
-            #reset_title {
-                width: 100%; 
-                text-align:center;
-                font-weight: 700;
-                font-size: calc(15px + 1vw);
-            }
-
-            #reset_input_container {
-                flex-direction: column;
-            }
-
-            .form_row {
-                margin-top: 1em;
-            }
-
-            #message_container {
-                align-items: center;
-                justify-content: center;
-                margin-top: 1em;
-                display: none;
-            }
-
-            #message {
-                color: darkblue;
-                font-size: calc(12px + 1vw);
-                max-width: 500px;
-                text-align: center;
-                align-self: center;
-            }
-
-            #reset_input_container label {
-                display: none;
-            }
-
-            @media screen and (min-width: 701px) {
-                
-            }
-        </style>
     </head>
     <body>
         <nav class="container nav_container">
@@ -70,26 +20,46 @@
                 </div>
         </nav>
 
-        <main>
+        <main class="container main_container">  <!-- new class  -->
             <div class="container_90">
                 <div class="main_form_container">
                     <form id="reset_password_form" class="form_box">
                         <div class="form_row">
                             <p id="reset_title">Reset your password</p>
                         </div>
-                        <div id="reset_input_container" class="form_row">
-                            <label for="new password" class="form_label">Enter your new password</label>
-                            <input type="newpassword" class="form_input" id="newpassword" required placeholder="Enter your new password" />
+                        <div class="form_row">
+                            <label for="new_password" class="form_label">
+                                New password
+                                <span class="tooltip">
+                                    <i class="fa fa-info-circle tooltip_i"></i>
+                                    <span class="tooltip-text">
+                                        Password must be at least 8 characters, include a number and a special
+                                        character.
+                                    </span>
+                                </span>
+                            </label>
+                            <input type="password" class="form_input" id="new_password" required placeholder="Enter your new password" />
+                        </div>
+
+                        <div class="form_row">
+                            <label for="new_password_repeat" class="form_label">Confirm new password</label>
+                            <input
+                                type="password"
+                                class="form_input"
+                                id="new_password_repeat"
+                                name="new password repeat"
+                                required
+                                placeholder="Repeat new password" />
+                        </div>
+
+                        <div id="update_password_message_container" class="form_row message_container">
+                            <p id="update_password_message" class="message"></p>
                         </div>
 
                         <div class="form_submit">
                             <button type="submit" class="button_green button submit_btn">
                                 Reset password
                             </button>
-                        </div>
-
-                        <div id="message_container" class="message_container">
-                            <p id="message" class="message">password reset succesfully.</p>
                         </div>
                     </form>
                 </div>
