--- a/pages/books_page.html
+++ b/pages/books_page.html
@@ -37,6 +37,8 @@
                         <button class="button button_gray" onClick="resetFilter()">Reset filter</button>
                     </div>
                 </div>
+                <div id="empty_list__message_container">
+                </div>
                 <div id="book_list_container" class="filtered_list">
                     <!--books template will be inserted here to add all books-->
                 </div>
