--- a/pages/reviews_page.html
+++ b/pages/reviews_page.html
@@ -35,7 +35,7 @@
             </div>
         </main>
 
-        <script src="../scripts/confirmation_modal.js"></script>
+        <!-- <script src="../scripts/confirmation_modal.js"></script> -->
         <script type="module" src="../scripts/add_review.js"></script>
         <script type="module" src="../scripts/nav_bar_logged_in.js"></script>
     </body>
